{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 203,
  "lineage": "a0fa8211-12fb-0b1f-d0a0-5668e4eb949e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd4a1903daff413b",
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:elastic-ip/eipalloc-0cd4a1903daff413b",
            "association_id": "eipassoc-01e4146d1eab8bcc0",
            "domain": "vpc",
            "id": "eipalloc-0cd4a1903daff413b",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-03e2bf3758f325aff",
            "private_dns": "ip-10-10-1-207.ap-northeast-1.compute.internal",
            "private_ip": "10.10.1.207",
            "public_dns": "ec2-16-76-10-187.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "16.76.10.187",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-nat-eip"
            },
            "tags_all": {
              "Name": "task-app-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "eipalloc-0cd4a1903daff413b",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:internet-gateway/igw-09bd6db45a1c0dea3",
            "id": "igw-09bd6db45a1c0dea3",
            "owner_id": "274847732759",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-igw"
            },
            "tags_all": {
              "Name": "task-app-igw"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "igw-09bd6db45a1c0dea3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:loadbalancer/app/task-app-alb/57fa690ca86db3c5",
            "arn_suffix": "app/task-app-alb/57fa690ca86db3c5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-app-alb-1502086685.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:loadbalancer/app/task-app-alb/57fa690ca86db3c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-app-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0a9d5503a0cf4d49d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06dff089029b370fd"
              },
              {
                "subnet_id": "subnet-0b0f4e83e666c5ac4"
              }
            ],
            "subnets": [
              "subnet-06dff089029b370fd",
              "subnet-0b0f4e83e666c5ac4"
            ],
            "tags": {
              "Name": "task-app-alb"
            },
            "tags_all": {
              "Name": "task-app-alb"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:loadbalancer/app/task-app-alb/57fa690ca86db3c5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:listener/app/task-app-alb/57fa690ca86db3c5/9d684c867696a966",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:targetgroup/task-app-backend-tg/cbefcb52db94b0ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:listener/app/task-app-alb/57fa690ca86db3c5/9d684c867696a966",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:loadbalancer/app/task-app-alb/57fa690ca86db3c5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:listener/app/task-app-alb/57fa690ca86db3c5/9d684c867696a966"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:targetgroup/task-app-backend-tg/cbefcb52db94b0ea",
            "arn_suffix": "targetgroup/task-app-backend-tg/cbefcb52db94b0ea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/tasks",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:targetgroup/task-app-backend-tg/cbefcb52db94b0ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:loadbalancer/app/task-app-alb/57fa690ca86db3c5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task-app-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task-app-backend-tg"
            },
            "tags_all": {
              "Name": "task-app-backend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:274847732759:targetgroup/task-app-backend-tg/cbefcb52db94b0ea"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd4a1903daff413b",
            "association_id": "eipassoc-01e4146d1eab8bcc0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-082e65a0f0b9eaf99",
            "network_interface_id": "eni-03e2bf3758f325aff",
            "private_ip": "10.10.1.207",
            "public_ip": "16.76.10.187",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06dff089029b370fd",
            "tags": {
              "Name": "task-app-nat-gw"
            },
            "tags_all": {
              "Name": "task-app-nat-gw"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "nat-082e65a0f0b9eaf99",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b295935504c7c8ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-082e65a0f0b9eaf99",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b295935504c7c8ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b295935504c7c8ab"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:route-table/rtb-0b295935504c7c8ab",
            "id": "rtb-0b295935504c7c8ab",
            "owner_id": "274847732759",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082e65a0f0b9eaf99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-app-private-rt"
            },
            "tags_all": {
              "Name": "task-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtb-0b295935504c7c8ab",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:route-table/rtb-098fa2ecfbdf5055f",
            "id": "rtb-098fa2ecfbdf5055f",
            "owner_id": "274847732759",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bd6db45a1c0dea3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-app-public-rt"
            },
            "tags_all": {
              "Name": "task-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtb-098fa2ecfbdf5055f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03597c274f9e782eb",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b295935504c7c8ab",
            "subnet_id": "subnet-08cc3901fcfdfd745"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtbassoc-03597c274f9e782eb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d33245e524789d4",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b295935504c7c8ab",
            "subnet_id": "subnet-02a4a84573ef6b0a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtbassoc-04d33245e524789d4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b0a5ca39222b492",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-098fa2ecfbdf5055f",
            "subnet_id": "subnet-06dff089029b370fd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtbassoc-00b0a5ca39222b492",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a36a73d3adf29a5",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-098fa2ecfbdf5055f",
            "subnet_id": "subnet-0b0f4e83e666c5ac4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "rtbassoc-03a36a73d3adf29a5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group/sg-0a9d5503a0cf4d49d",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9d5503a0cf4d49d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "task-app-alb-sg",
            "name_prefix": "",
            "owner_id": "274847732759",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-app-alb-sg"
            },
            "tags_all": {
              "Name": "task-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sg-0a9d5503a0cf4d49d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group/sg-014e811328b50f512",
            "description": "Security group for backend tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014e811328b50f512",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9d5503a0cf4d49d"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "task-app-backend-sg",
            "name_prefix": "",
            "owner_id": "274847732759",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-app-backend-sg"
            },
            "tags_all": {
              "Name": "task-app-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sg-014e811328b50f512",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:subnet/subnet-08cc3901fcfdfd745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc3901fcfdfd745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274847732759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-private-1a"
            },
            "tags_all": {
              "Name": "task-app-private-1a"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "subnet-08cc3901fcfdfd745",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:subnet/subnet-02a4a84573ef6b0a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4a84573ef6b0a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274847732759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-private-1c"
            },
            "tags_all": {
              "Name": "task-app-private-1c"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "subnet-02a4a84573ef6b0a1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:subnet/subnet-06dff089029b370fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dff089029b370fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274847732759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-public-1a"
            },
            "tags_all": {
              "Name": "task-app-public-1a"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "subnet-06dff089029b370fd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:subnet/subnet-0b0f4e83e666c5ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0f4e83e666c5ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274847732759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-public-1c"
            },
            "tags_all": {
              "Name": "task-app-public-1c"
            },
            "vpc_id": "vpc-0b1a6c2e186b40f9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "subnet-0b0f4e83e666c5ac4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:vpc/vpc-0b1a6c2e186b40f9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02cd55a38d126533d",
            "default_route_table_id": "rtb-0bfcda01c170a72fd",
            "default_security_group_id": "sg-0d3aacc1ca975c871",
            "dhcp_options_id": "dopt-025c5beef92b9d0e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1a6c2e186b40f9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfcda01c170a72fd",
            "owner_id": "274847732759",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-app-vpc"
            },
            "tags_all": {
              "Name": "task-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "vpc-0b1a6c2e186b40f9b",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group-rule/sgr-0afea574d4a9e798b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0afea574d4a9e798b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a9d5503a0cf4d49d",
            "security_group_rule_id": "sgr-0afea574d4a9e798b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sgr-0afea574d4a9e798b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group-rule/sgr-0b6d6da762fa58a80",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b6d6da762fa58a80",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-014e811328b50f512",
            "security_group_rule_id": "sgr-0b6d6da762fa58a80",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sgr-0b6d6da762fa58a80",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group-rule/sgr-0a95235c22c13dc83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a95235c22c13dc83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a9d5503a0cf4d49d",
            "security_group_rule_id": "sgr-0a95235c22c13dc83",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sgr-0a95235c22c13dc83",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group-rule/sgr-0b6929f0b8b26b3c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b6929f0b8b26b3c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a9d5503a0cf4d49d",
            "security_group_rule_id": "sgr-0b6929f0b8b26b3c5",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sgr-0b6929f0b8b26b3c5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:274847732759:security-group-rule/sgr-05e993a76c2fa2981",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-05e993a76c2fa2981",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a9d5503a0cf4d49d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-014e811328b50f512",
            "security_group_rule_id": "sgr-05e993a76c2fa2981",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "274847732759",
            "id": "sgr-05e993a76c2fa2981",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}